[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/comms.gd" type="Script" id=1]

[node name="comms" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 64.123
margin_top = 779.958
margin_right = 1014.12
margin_bottom = 871.958
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 70.7676
margin_top = 849.239
margin_right = 1020.77
margin_bottom = 941.239

[node name="HSlider3" type="HSlider" parent="."]
margin_left = 66.9171
margin_top = 928.94
margin_right = 1016.92
margin_bottom = 1020.94
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider4" type="HSlider" parent="."]
margin_left = 59.7819
margin_top = 1005.05
margin_right = 1009.78
margin_bottom = 1097.05
max_value = 10.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}
